--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -56,6 +56,8 @@
                     <li><a href="/auth/login">Login</a></li>
                     <% } %>
                 <li><a href="/">Homepage</a></li>
+                <li><a href="/profile">Profile</a></li>
+
             </ul>
         </nav>
         <header>
